--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,10 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^7.3.3",
+    "jest": "^26.6.3",
     "mysql2": "^2.2.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest-cli": "^26.6.3"
+  }
 }
