--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/barron-a/employee-tracker#readme",
   "dependencies": {
+    "asciiart-logo": "^0.2.6",
+    "colors": "^1.4.0",
     "console.table": "^0.10.0",
+    "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "jest": "^26.6.3",
     "mysql2": "^2.2.5"
